Thymeleaf에 대해 학습하고 JSON으로 데이터 전송에 대해 학습함

--- a/work/springbootwork/bootErp/src/main/resources/application.properties
+++ b/work/springbootwork/bootErp/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.datasource.password=erp
 #classpath(src)의 mapper패키지의 모든 xml파일을 매퍼로 정의
 mybatis.mapper-locations=classpath:/mapper/**.xml
 mybatis.type-aliases-package=com.playdata.booterp.dto
+
+#업로드될 파일의 경로 - 사용자정의 프로퍼티
+file.dir=C:/JBJ/playdata/upload/
