--- a/work/springbootwork/jpaTest/src/main/resources/application.properties
+++ b/work/springbootwork/jpaTest/src/main/resources/application.properties
@@ -1,17 +1,22 @@
 server.port=9000
-server.servlet.context-path=/erp
 
 #db사용을 위한 설정
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@127.0.0.1:1521:xe
-spring.datasource.username=erp
-spring.datasource.password=erp
+spring.datasource.username=jpatest
+spring.datasource.password=jpatest
 
 #jpa에 관련된 설정
 #sysout으로 출력
 spring.jpa.show-sql=true
 #테이블이 없으면 자동으로 만들어진다. drop되면서 자동으로 create
-spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
+
+#JPA log
+logging.level.org.hibernate.sql=debug
+logging.level.org.hibernate.type.descriptor.sql=trace
+
 #JPA가 만드는 sql을 예쁘게 출력
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
