JPA 설정과 페이징 처리에 대해 학습함

--- a/work/springbootwork/jpaTest/src/main/resources/application.properties
+++ b/work/springbootwork/jpaTest/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.datasource.password=jpatest
 #sysout으로 출력
 spring.jpa.show-sql=true
 #테이블이 없으면 자동으로 만들어진다. drop되면서 자동으로 create
-#spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=none
 
 #JPA log
 logging.level.org.hibernate.sql=debug
