--- a/work/msawork/springcloud/customer-service/src/main/resources/application.yml
+++ b/work/msawork/springcloud/customer-service/src/main/resources/application.yml
@@ -1,2 +1,31 @@
 server:
   port: 9300
+
+spring:
+  application:
+    name: customer-service
+  datasource:
+    driver-class-name: oracle.jdbc.driver.OracleDriver
+    url: jdbc:oracle:thin:@127.0.0.1:1521:xe
+    username: jpatest
+    password: jpatest
+
+  jpa:
+    show-sql: true
+    hibernate:
+#      ddl-auto: create
+      ddl-auto: none
+
+    properties:
+      hibernate:
+        format_sql: true
+        use_sql_comments: true
+
+logging:
+  level:
+    org:
+      hibernate:
+        sql: debug
+        type:
+          descriptor:
+            sql: trace
