--- a/work/msawork/springsecuritytest/src/main/resources/application.yml
+++ b/work/msawork/springsecuritytest/src/main/resources/application.yml
@@ -4,6 +4,29 @@ server:
 spring:
   application:
     name: securitytest
+  datasource:
+    driver-class-name: oracle.jdbc.driver.OracleDriver
+    url: jdbc:oracle:thin:@127.0.0.1:1521:xe
+    username: jpatest
+    password: jpatest
+  jpa:
+    show-sql: true
+    hibernate:
+#      ddl-auto: create
+      ddl-auto: none
+
+    properties:
+      hibernate:
+        format_sql: true
+        use_sql_comments: true
+logging:
+  level:
+    org:
+      hibernate:
+        sql: debug
+        type:
+          descriptor:
+            sql: trace
 
   security:
     user:
