--- a/work/msawork/springsecuritytest/src/main/resources/application.yml
+++ b/work/msawork/springsecuritytest/src/main/resources/application.yml
@@ -7,8 +7,8 @@ spring:
   datasource:
     driver-class-name: oracle.jdbc.driver.OracleDriver
     url: jdbc:oracle:thin:@127.0.0.1:1521:xe
-    username: jpatest
-    password: jpatest
+    username: msatest
+    password: msatest
   jpa:
     show-sql: true
     hibernate:
