RestTemplate 으로 프로젝트간 통신에 대해 학습함

--- a/work/msawork/springcloud/order-service/src/main/resources/application.yml
+++ b/work/msawork/springcloud/order-service/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     name: order-service
   datasource:
     driver-class-name: oracle.jdbc.driver.OracleDriver
-    url: jdbc:oracle:thin:@0.tcp.jp.ngrok.io:17656:xe
+    url: jdbc:oracle:thin:@0.tcp.jp.ngrok.io:17256:xe
     #    url: jdbc:oracle:thin:@127.0.0.1:1521:xe
     username: bj
     password: bj
@@ -19,8 +19,8 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: create
-#      ddl-auto: none
+#      ddl-auto: create
+      ddl-auto: none
 
     properties:
       hibernate:
