kafka와 spring 프로젝트 연동함

--- a/work/msawork/springcloud/product-service/src/main/resources/application.yml
+++ b/work/msawork/springcloud/product-service/src/main/resources/application.yml
@@ -1,10 +1,9 @@
-
 server:
-  port: 9500
+  port: 9400
 
 spring:
   application:
-    name: order-service
+    name: product-service
 
   datasource:
     driver-class-name: oracle.jdbc.driver.OracleDriver
