--- a/work/msawork/springcloud/order-service/build.gradle
+++ b/work/msawork/springcloud/order-service/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 	runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.kafka:spring-kafka-test'
+	implementation 'org.springframework.kafka:spring-kafka'
 }
 
 tasks.named('bootBuildImage') {
