--- a/work/msawork/redis-test/src/main/resources/application.properties
+++ b/work/msawork/redis-test/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8082
-spring.redis.host=192.168.0.6
-spring.redis.port=6379
+spring.data.redis.host=192.168.0.6
+spring.data.redis.port=6379
+spring.data.redis.password=test
